testsuite/tests/indexed-types/should_fail/T13971.stderr
T13971.hs:9:3: error: [GHC-41522]
    • Illegal argument ‘*’ in:
        ‘type T @{k} @(*) a = ...’
        The arguments to ‘T’ must all be distinct type variables.
    • In the default associated type family instance declaration for ‘T’
      In the class declaration for ‘C’

